Added Login and Register pages

--- a/www/drafts/about.html
+++ b/www/drafts/about.html
@@ -45,7 +45,13 @@
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
+            </ul>   
+
+            <ul class="nav pull-right">
+              <li><a href="login.html">Login</a></li>
+              <li><a href="register.html">Register</a></li>
             </ul>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -63,6 +69,12 @@
       <p>The main output of AIVScan will be a security report.  Users will receive this report through an email address that they must register on 		 our website.  The document will be presented in a very user friendly and non-technical format.  Clients will be offered a summary of the 		 results, detailed findings, and our suggestions for remediation actions.  Each vulnerability discovered will be rated on a scale from 		 Critical to Low. The secondary output of AIVScan will be in the form of educational slide shows that will be displayed while a security 		 scan is in progress.  These presentations will be designed to increase the users’ awareness of security topics such as password strength, 		 avoiding phishing attacks, and others.</p>  
 
       <p>The primary goal of AIVScan is to improve the overall security profile of our users’ computers.  If our clients follow through with our 	  suggestions for improvement, they will improve their computer’s security and help protect their sensitive information.</p>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Pwn Stars 2012</p>
+      </footer>
 
     </div> <!-- /container -->
 
