--- a/www/drafts/login.html
+++ b/www/drafts/login.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pwn Stars | AIVScan</title>
+    <title>AIVScan | Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
-
 
     <!-- Le styles -->
     <link href="bootstrap.css" rel="stylesheet">
@@ -44,13 +42,13 @@
           <a class="brand" href="index.html">AIVScan</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
 
             <ul class="nav pull-right">
-              <li><a href="login.html">Login</a></li>
+              <li class="active"><a href="login.html">Login</a></li>
               <li><a href="register.html">Register</a></li>
             </ul>
 
@@ -59,27 +57,11 @@
       </div>
     </div>
 
-
     <div class="container">
 
-      
+      <h2>Already registered?</h2>
+      <p>Log in here!</p>
 
-      <h1>Welcome to AIVScan</h1>
-      <p>What is AIVScan?! Click <a href="about.html">here</a> to find out.</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> 
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <h2>Using AIVScan</h2>
-      <p>Click <a href="#">here</a> to get started. </p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br> 
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      
       <hr>
 
       <footer>
