--- a/www/drafts/contact.html
+++ b/www/drafts/contact.html
@@ -46,6 +46,12 @@
               <li><a href="about.html">About</a></li>
               <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
+
+            <ul class="nav pull-right">
+              <li><a href="login.html">Login</a></li>
+              <li><a href="register.html">Register</a></li>
+            </ul>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -55,6 +61,12 @@
 
       <h1>Contact Us</h1>
       <p>Do we want to have a form for sending emails, or just a standard mailto: link that opens the user's email client?</p>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Pwn Stars 2012</p>
+      </footer>
 
     </div> <!-- /container -->
 
