Added forms & commented code.

--- a/www/drafts/about.html
+++ b/www/drafts/about.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-
+    <!-- Begin the navbar
+    ===================================== -->
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -43,7 +44,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="about.html">About</a></li>
+              <li class="active"><a href="about.html">About</a></li><!-- shows link as active -->
               <li><a href="contact.html">Contact</a></li>
             </ul>   
 
@@ -78,7 +79,7 @@
         </div><!-- Span 8 -->
       </div><!-- Row -->
  
-      <hr>
+<hr />
 
       <footer>
         <p>&copy; Pwn Stars 2012</p>
