--- a/www/drafts/index.html
+++ b/www/drafts/index.html
@@ -32,7 +32,8 @@
   </head>
 
   <body>
-
+    <!-- Begin the navbar
+    ===================================== -->
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -44,7 +45,7 @@
           <a class="brand" href="index.html">AIVScan</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li><!-- shows link as active -->
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -62,7 +63,7 @@
 
     <div class="container">
 
-  <!--Borrwed this portion from the hero bootstrap layout -->
+  <!--Borrwed this portion from the hero.html bootstrap template -->
     <div class="hero-unit">   
       <h1>Welcome to AIVScan!</h1>
       <p>AIVScan is a super awesome tool for blah blah blah some stuff about security! Click the pretty blue button to get started! </p>
@@ -91,7 +92,7 @@
         </div><!-- span 8 -->
       </div><!-- row -->
     
-  <hr>
+<hr />
 
       <footer>
         <p>&copy; Pwn Stars 2012</p>
