--- a/www/drafts/contact.html
+++ b/www/drafts/contact.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-
+    <!-- Begin the navbar
+    ===================================== -->
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -44,7 +45,7 @@
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="active"><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="contact.html">Contact</a></li><!-- shows link as active -->
             </ul>
 
             <ul class="nav pull-right">
@@ -65,23 +66,39 @@
      </div><!-- span 2 -->
 
     <div class="span8">
-      <h1>Contact Form</h1>
-      
-      <p>Working on a PHP form. 5-30-12</p>
-      
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h1>Contact Pwn Stars</h1>
+          <!-- Begin Form -->
+	  <form class="form-horizontal">
+            <fieldset>
+              <legend>Fill out and submit this handy form to contact us!</legend>
+               <div class="control-group">
+                 <label class="control-label" for="input01">Email address</label>
+                   <div class="controls">
+                     <input type="text" class="input-xlarge" id="input01" placeholder="Email address">
+                   </div>
+               </div>
+               <div class="control-group">
+                 <label class="control-label" for="input01">Confirm email</label>
+                   <div class="controls">
+                     <input type="text" class="input-xlarge" id="input01" placeholder="Confirm email">
+                   </div>
+               </div>
+               <div class="control-group">
+		 <label class="control-label" for="textarea">Message</label>
+                   <div class="controls">
+                     <textarea class="input-xlarge" id="textarea" rows="3" style="margin: 0px; width:307px; height:146px; "></textarea>
+                   </div>
+               </div>
+               <div class="form-actions">
+                 <button type="submit" class="btn">Submit</button>
+               </div>
+            </fieldset>
+          </form>
+       <!-- End Form -->
        </div><!-- Span 8 -->
      </div><!-- Row -->
 
-      <hr>
+<hr />
 
 
       <footer>
