--- a/www/drafts/login.html
+++ b/www/drafts/login.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-
+    <!-- Begin the navbar
+    ===================================== -->
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -48,7 +49,7 @@
             </ul>
 
             <ul class="nav pull-right">
-              <li class="active"><a href="login.html">Login</a></li>
+              <li class="active"><a href="login.html">Login</a></li><!-- shows link as active -->
               <li><a href="register.html">Register</a></li>
             </ul>
 
@@ -59,10 +60,31 @@
 
     <div class="container">
 
-      <h1>Log In</h1>
-      <p>Form here.</p>
+     <div class="row">
+      <div class="span2"
+       <p><img src="img/AIVScan Logo.png" height="150px" width="175px" /></p>
+     </div><!-- span 2 -->
+       
+      <div class="span8">
+       
+       <h1>Log In</h1>
+        <p>Returning users log in here.</p>
 
-      <hr>
+        <!-- Begin login form -->
+	<form class="well form-horizontal">
+  	  <input type="text" class="input-medium" placeholder="Email">
+  	  <input type="password" class="input-medium" placeholder="Password">
+  	  <label class="checkbox">
+    	    <input type="checkbox"> Remember me
+  	</label>
+  	<button type="submit" class="btn">Sign in</button>
+        <p><a href="#">Forgot Password?</a></p>
+       </form><!-- End login form -->
+
+      </div><!-- Span 8 -->
+    </div><!-- Row -->
+
+<hr />
 
       <footer>
         <p>&copy; Pwn Stars 2012</p>
