Made changes to login.html and added scan.html and terms.html.

--- a/www/drafts/contact.html
+++ b/www/drafts/contact.html
@@ -67,7 +67,7 @@
 
     <div class="span8">
       <h1>Contact Pwn Stars</h1>
-          <!-- Begin Form -->
+          <!-- Begin Contact Form -->
 	  <form class="form-horizontal">
             <fieldset>
               <legend>Fill out and submit this handy form to contact us!</legend>
