--- a/www/drafts/about.html
+++ b/www/drafts/about.html
@@ -61,9 +61,9 @@
     <div class="container">
 
        <div class="row">
-        <div class="span2"
+        <div class="span2">
          <p><img src="img/AIVScan Logo.png" height="150px" width="175px" /></p>
-        </div><!-- span 2 -->
+        </div><!-- Span 2 -->
 
      <div class="span8">
       <h1>What is AIVScan?</h1>
