Minor edits plus added two .js files to help with the modals.

--- a/www/drafts/about.html
+++ b/www/drafts/about.html
@@ -66,7 +66,7 @@
         </div><!-- Span 2 -->
 
      <div class="span8">
-      <h1>What is AIVScan?</h1>
+      <h1>Why AIVScan?</h1>
       <p>Today, some of our most valuable assets are in the form of electronic information.  As such, we must take measures to protect our data and 		 ensure that it doesn’t fall into the wrong hands.  External threats, whether hackers or viruses, are a concern that is difficult to evaluate 		 and assess. AIVScan is designed to give individuals and organizations the ability to quickly and efficiently assess their external 		 footprint.</p>  
 
       <p>AIVScan is a web-based security evaluation application.  Its primary goal is to efficiently and accurately assess the security of a 		 computer. AIVScan will be designed for all types of users, home or business, regardless of technical sophistication.  Our service is an 		 automatic security scan that determines Internet-accessible services, their vendor and version, and any known vulnerabilities that can 	 endanger the user’s computer and stored information.  The product will automatically obtain much of the information necessary to conduct the 		 security scan, including IP address, operating system, and others.</p>  
