--- a/www/drafts/contact.html
+++ b/www/drafts/contact.html
@@ -74,23 +74,24 @@
                <div class="control-group">
                  <label class="control-label" for="input01">Email address</label>
                    <div class="controls">
-                     <input type="text" class="input-xlarge" id="input01" placeholder="Email address">
+                     <input type="text" class="span3 input-large" id="input01" placeholder="Email address">
                    </div>
                </div>
                <div class="control-group">
                  <label class="control-label" for="input01">Confirm email</label>
                    <div class="controls">
-                     <input type="text" class="input-xlarge" id="input01" placeholder="Confirm email">
+                     <input type="text" class="span3 input-large" id="input01" placeholder="Confirm email">
                    </div>
                </div>
                <div class="control-group">
 		 <label class="control-label" for="textarea">Message</label>
                    <div class="controls">
-                     <textarea class="input-xlarge" id="textarea" rows="3" style="margin: 0px; width:307px; height:146px; "></textarea>
+                     <textarea class="span3 input-large" id="textarea" rows="6" cols="40" placeholder="Enter a message here"></textarea>
                    </div>
                </div>
                <div class="form-actions">
-                 <button type="submit" class="btn">Submit</button>
+                 <button type="submit" class="btn btn-primary">Submit</button>
+                 <button class="btn">Cancel</button>
                </div>
             </fieldset>
           </form>
