--- a/www/drafts/register.html
+++ b/www/drafts/register.html
@@ -85,6 +85,18 @@
                   </div>
               </div>
               <div class="control-group">
+                <label class="control-label" for="input01">Email</label>
+                  <div class="controls">
+                    <input type="text" class="input-large" id="input01" placeholder="Email address">
+                  </div> 
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="input01">Confirm Email</label>
+                  <div class="controls">
+                    <input type="text" class="input-large" id="input01" placeholder="Confirm Email">
+                  </div> 
+              </div>
+              <div class="control-group">
                 <label class="control-label" for="input01">Password</label>
                   <div class="controls">
                     <input type="password" class="input-large" id="input01" placeholder="Password">
