--- a/www/drafts/scan.html
+++ b/www/drafts/scan.html
@@ -72,14 +72,14 @@
               <div class="modal" style="position: relative; top: auto; left: auto; margin: 0 auto; z-index: 1; max-width: 100%;">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">x</button>
-                  <h3>Begin scan?</h3>
+                  <h3>AIVScan is ready</h3>
                 </div>
                 <div class="modal-body">
                   <p>You're all set! Your IP address is <code>69.123.43.23</code>. Click the blue button to start AIVScan.</p>
                 </div>
                 <div class="modal-footer">
                   <a href="#" class="btn" data-bitly-type="bitly_hover_card">Cancel</a>
-                  <a href="#" class="btn btn-primary" data-bitly-type="bitly_hover_card">Initiate Scan</a>
+                  <a href="#" class="btn btn-primary" data-bitly-type="bitly_hover_card">Scan</a>
                 </div>
              </div><!-- Modal -->
           </div><!-- Span 8 -->
