--- a/www/drafts/login.html
+++ b/www/drafts/login.html
@@ -71,14 +71,14 @@
         <p>Returning users log in here.</p>
 
         <!-- Begin login form -->
-	<form class="well form-horizontal">
+	<form class="well form-vertical">
   	  <input type="text" class="input-medium" placeholder="Email">
   	  <input type="password" class="input-medium" placeholder="Password">
   	  <label class="checkbox">
     	    <input type="checkbox"> Remember me
-  	</label>
-  	<button type="submit" class="btn">Sign in</button>
-        <p><a href="#">Forgot Password?</a></p>
+  	  </label>
+  	  <button type="submit" class="btn">Sign in</button>
+          <p><a href="#">Forgot Password?</a></p>
        </form><!-- End login form -->
 
       </div><!-- Span 8 -->
